# game-capture

nixos-flake/: TODO  beelink.nix  boot-configuration.nix  capture.nix  enable-uart1.dts  flake.nix  go2rtc.nix  hardware-configuration.nix  legacy.nix  nanopi-r2s.nix  nginx.nix  wyse.nix
wii-supervisor-firmware/: CMakeLists.txt  main.cpp
wii-supervisor-firmware/include/: gcReport.hpp  joybus.hpp
